--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -98,9 +98,9 @@
                                                                 ">
                     <mat-form-field class="select-width">
                       <mat-label>
-                      <span *ngIf="element.estadoValidacion !== '6' && element.validacionCodigo != null">{{ element.validacionCodigoString }}</span>
+                      <span *ngIf="(element.estadoValidacion !== '6' && element.validacionCodigo != null) || (element.estadoValidacion === '6' && element.tieneModificacionApoyo && element.aprobacionCodigo === '2')">{{ element.validacionCodigoString }}</span>
                     </mat-label> 
-                      <mat-select [(ngModel)]="element.validacionCodigo" (selectionChange)="changeState()" required>
+                      <mat-select [(ngModel)]="element.validacionCodigo" (selectionChange)="changeState(element)" required>
                         <mat-option *ngFor="let estado of estadoArray" [value]="estado.value">
                           {{ estado.name }}
                         </mat-option>
