--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/accordion-novedades/accordion-novedades.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/accordion-novedades/accordion-novedades.component.html
@@ -10,32 +10,10 @@
         <app-form-registrar-novedad-contrato 
                                             [tiposNovedadModificacionContractual]="this.tiposNovedadModificacionContractual"
                                             [novedadDescripcion]="novedad"
+                                            (guardar)="guardarRegistro()"
                                             >
         </app-form-registrar-novedad-contrato>
 
     </mat-expansion-panel>
-    <!-- <mat-expansion-panel class="expansion-style sub-expansion">
-        <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title sin-diligenciar">
-                Novedad 2
-            </mat-panel-title>
-        </mat-expansion-panel-header>
-        <app-form-registrar-novedad-contrato [tiposNovedadModificacionContractual]="this.tiposNovedadModificacionContractual"></app-form-registrar-novedad-contrato>
-    </mat-expansion-panel>
-    <mat-expansion-panel class="expansion-style sub-expansion">
-        <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title sin-diligenciar">
-                Novedad 3
-            </mat-panel-title>
-        </mat-expansion-panel-header>
-        <app-form-registrar-novedad-contrato [tiposNovedadModificacionContractual]="this.tiposNovedadModificacionContractual"></app-form-registrar-novedad-contrato>
-    </mat-expansion-panel>
-    <mat-expansion-panel class="expansion-style sub-expansion">
-        <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title sin-diligenciar">
-                Novedad 4
-            </mat-panel-title>
-        </mat-expansion-panel-header>
-        <app-form-registrar-novedad-contrato [tiposNovedadModificacionContractual]="this.tiposNovedadModificacionContractual"></app-form-registrar-novedad-contrato>
-    </mat-expansion-panel> -->
+    
 </mat-accordion>
