--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
@@ -26,7 +26,7 @@
     <!-- tipoNovedad Column -->
     <ng-container matColumnDef="tipoNovedadNombre">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipo de novedad</th>
-      <td mat-cell *matCellDef="let element">{{element.tipoNovedadNombre}}</td>
+      <td mat-cell *matCellDef="let element">{{element.novedadesSeleccionadas}}</td>
     </ng-container>
 
     <!-- estadoNovedad Column -->
@@ -50,27 +50,64 @@
     <ng-container matColumnDef="novedadContractualId">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
       <td mat-cell *matCellDef="let element">
-        <a mat-button color="warn" mat-raised-button color="accent" class="btn-table"
-          [routerLink]="[ 'verDetalle', element.novedadContractualId ]">
+        <a mat-button 
+                      color="warn" 
+                      mat-raised-button 
+                      color="accent" 
+                      class="btn-table"
+                      [routerLink]="[ 'verDetalle', element.novedadContractualId ]"
+                      *ngIf="element.estadoCodigo !== '1'"
+                      >
           Ver detalle
         </a>
-        <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-          (click)="aprobarSolicitud(element.novedadContractualId)">
+
+        <button mat-button 
+                          color="warn" 
+                          mat-raised-button 
+                          color="accent" 
+                          class="btn-table" 
+                          type="button"
+                          (click)="aprobarSolicitud(element.novedadContractualId)"
+                          *ngIf="element.estadoCodigo === '1' && element.registroCompleto === true"
+                          >
           Aprobar solicitud
         </button>
-        <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-          (click)="rechazarSolicitud(element.novedadContractualId)">
+
+        <button mat-button 
+                          color="warn" 
+                          mat-raised-button 
+                          color="accent" 
+                          class="btn-table" 
+                          type="button"
+                          (click)="rechazarSolicitud(element.novedadContractualId)"
+                          *ngIf="element.estadoCodigo === '1' && element.registroCompleto === true"
+                          >
           Rechazar solicitud
         </button>
-        <a mat-button color="warn" mat-raised-button color="accent" class="btn-table"
-          [routerLink]="[ '/registrarSolicitudNovedadContractual/registrarSolicitud', element.novedadContractualId ]">
+
+        <a mat-button 
+                      color="warn" 
+                      mat-raised-button 
+                      color="accent" 
+                      class="btn-table"
+                      [routerLink]="[ '/registrarSolicitudNovedadContractual/registrarSolicitud', element.novedadContractualId ]"
+                      *ngIf="element.estadoCodigo === '1'"
+                      >
           Ver detalle/Editar
         </a>
-        <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-          (click)="openDialogSiNo('', '<b>¿Está seguro de eliminar este registro?</b>',element.novedadContractualId)"
+
+        <button mat-button 
+                          color="warn" 
+                          mat-raised-button 
+                          color="accent" 
+                          class="btn-table" 
+                          type="button"
+                          (click)="openDialogSiNo('', '<b>¿Está seguro de eliminar este registro?</b>',element.novedadContractualId)"
+                          *ngIf="element.estadoCodigo === '1'"
           >
           Eliminar
         </button>
+
       </td>
     </ng-container>
 
