--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/tabla-proyectos/tabla-proyectos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/tabla-proyectos/tabla-proyectos.component.html
@@ -16,7 +16,7 @@
         Fecha de terminación del proyecto
       </th>
       <td mat-cell *matCellDef="let element">
-        <b>{{ element.fechaSuscripcion }}</b>
+        <b>{{ element.fechaSuscripcion | date: "dd/MM/yyyy" }}</b>
       </td>
     </ng-container>
 
@@ -25,7 +25,7 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Llave MEN
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.llaveMen }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.proyecto.llaveMen }}</td>
     </ng-container>
 
     <!-- tipoIntervencion Column -->
@@ -33,7 +33,7 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Tipo de intervención
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.tipoIntervencion }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.proyecto.tipoIntervencionString }}</td>
     </ng-container>
 
     <!-- institucionEducativa Column -->
@@ -42,7 +42,7 @@
         Institución Educativa
       </th>
       <td mat-cell *matCellDef="let element">
-        {{ element.institucionEducativa }}
+        {{ element.proyecto.institucionEducativa.nombre }}
       </td>
     </ng-container>
 
@@ -51,7 +51,7 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Sede
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.sedeEducativa }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.proyecto.sede.nombre }}</td>
     </ng-container>
 
     <!-- estadoEntrega Column -->
@@ -64,7 +64,7 @@
       </td>
     </ng-container>
 
-    <!-- estadoRegistro Column -->
+    <!-- registroCompleto Column -->
     <ng-container matColumnDef="registroCompletoEntregaETC">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Estado del registro
@@ -72,10 +72,19 @@
       <td mat-cell *matCellDef="let element">
         <span
           class="info-text d-block m-0"
-          [class.sin-diligenciar]="element.registroCompletoEntregaETC === false"
-          [class.completo]="element.registroCompletoEntregaETC === true"
+          [class.sin-diligenciar]="!element.registroCompletoEntregaETC || element.registroCompletoEntregaETC == null"
+          [class.completo]="element.registroCompletoEntregaETC"
         ></span>
-        {{ element.registroCompletoEntregaETC ? "Completo" : "Incompleto" }}
+        <span
+        *ngIf="element.registroCompletoEntregaETC"
+          >
+          Completo
+      </span>
+      <span
+      *ngIf="!element.registroCompletoEntregaETC || element.registroCompletoEntregaETC == null"
+        >
+        Incompleto
+    </span>
       </td>
     </ng-container>
 
@@ -92,7 +101,7 @@
           class="btn-table"
           [routerLink]="['registrarEntrega', element.informeFinalId]"
         >
-        Revisar informe
+        Registrar entrega
         </a>
       </td>
     </ng-container>
