--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/dialog-observaciones-item-listchequeo/dialog-observaciones-item-listchequeo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/dialog-observaciones-item-listchequeo/dialog-observaciones-item-listchequeo.component.html
@@ -12,52 +12,66 @@
     <p>
         {{ data.registro.listaChequeoItem.nombre }}
     </p>
-    <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
-        <div class="row">
-            <div class="col-md-12" style="padding-left: 0;">
-                <div>
-                    <div class="d-flex align-items-center">
-                        <div class="text-area-quill" [ngClass]="{
-                            'color-secondaryColor':
-                              (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
-                              (addressForm.get('observaciones').invalid && estaEditando)
-                          }"
-                            style="text-align: left; margin-top: 1em; max-width: calc(100% - 2.3em); margin-left: -2em;">
-                            <label for="observaciones" class="text-area-quill--label size-label" [ngClass]="{
-                                'colorMainColor':
-                                  !((addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
-                                  (addressForm.get('observaciones').invalid && estaEditando))
-                              }">
-                                Observaciones
-                            </label>
-                            <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required
-                                (onContentChanged)="maxLength($event, 1000)" formControlName="observaciones"
-                                #observaciones>
-                            </quill-editor>
+    <ng-container *ngIf="this.data.esVerDetalle === true; else noEsVerDetalle">
+        <mat-card class="shipping-card">
+            <mat-card-header class="header-card header-card--margin">
+                <mat-card-title class="header-card--text">
+                    Observaciones
+                </mat-card-title>
+            </mat-card-header>
+            <mat-card-content style="text-align: left;">
+                <section [innerHTML]="this.data.registro.observacion"></section>
+            </mat-card-content>
+        </mat-card>
+    </ng-container>
+    <ng-template #noEsVerDetalle>
+        <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
+            <div class="row">
+                <div class="col-md-12" style="padding-left: 0;">
+                    <div>
+                        <div class="d-flex align-items-center">
+                            <div class="text-area-quill" [ngClass]="{
+                                'color-secondaryColor':
+                                  (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
+                                  (addressForm.get('observaciones').invalid && estaEditando)
+                              }"
+                                style="text-align: left; margin-top: 1em; max-width: calc(100% - 2.3em); margin-left: -2em;">
+                                <label for="observaciones" class="text-area-quill--label size-label" [ngClass]="{
+                                    'colorMainColor':
+                                      !((addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
+                                      (addressForm.get('observaciones').invalid && estaEditando))
+                                  }">
+                                    Observaciones
+                                </label>
+                                <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required
+                                    (onContentChanged)="maxLength($event, 1000)" formControlName="observaciones"
+                                    #observaciones>
+                                </quill-editor>
+                            </div>
+                            <span class="contador miles" *ngIf="addressForm.controls.observaciones.value">
+                                {{1000 - (textoLimpio(observaciones.quillEditor,1000))}}
+                            </span>
+                            <span class="contador miles" *ngIf="!addressForm.controls.observaciones.value">
+                                1000
+                            </span>
+                            <span class="icon-incompleto">
+                                <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
+                                    alt="este campo es requerido" [matTooltipPosition]="'above'"
+                                    matTooltip="Debe ingresar la información en el campo para continuar"
+                                    matTooltipClass="info-tooltip" *ngIf="
+                                    (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
+                                    (addressForm.get('observaciones').invalid && estaEditando)
+                                  " />
+                            </span>
                         </div>
-                        <span class="contador miles" *ngIf="addressForm.controls.observaciones.value">
-                            {{1000 - (textoLimpio(observaciones.quillEditor,1000))}}
-                        </span>
-                        <span class="contador miles" *ngIf="!addressForm.controls.observaciones.value">
-                            1000
-                        </span>
-                        <span class="icon-incompleto">
-                            <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
-                                alt="este campo es requerido" [matTooltipPosition]="'above'"
-                                matTooltip="Debe ingresar la información en el campo para continuar"
-                                matTooltipClass="info-tooltip" *ngIf="
-                                (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
-                                (addressForm.get('observaciones').invalid && estaEditando)
-                              " />
-                        </span>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="text-center">
-            <button mat-raised-button color="accent" class="btn-dialog" type="submit" [disabled]="addressForm.invalid">
-                Realizar observación
-            </button>
-        </div>
-    </form>
+            <div class="text-center">
+                <button mat-raised-button color="accent" class="btn-dialog" type="submit" [disabled]="addressForm.invalid">
+                    Realizar observación
+                </button>
+            </div>
+        </form>
+    </ng-template>
 </div>
