--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/validar-lista-chequeo/validar-lista-chequeo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/validar-lista-chequeo/validar-lista-chequeo.component.html
@@ -1,54 +1,96 @@
 <mat-accordion *ngIf="solicitudPagoModificado !== undefined">
-    <mat-expansion-panel class="expansion-style sub-expansion" *ngFor="let solicitudPagoListaChequeo of solicitudPagoModificado.solicitudPagoListaChequeo; index as i">
-        <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title" style="font-size: .8em !important;" [ngClass]="getEstadoSemaforo( solicitudPagoListaChequeo.solicitudPagoListaChequeoRespuesta )">
-                {{ firstLetterUpperCase( solicitudPagoListaChequeo.listaChequeo?.nombre ) }}
-            </mat-panel-title>
-        </mat-expansion-panel-header>
-
-        <div class="table-responsive">
-            <table mat-table [dataSource]="getMatTable( solicitudPagoListaChequeo.solicitudPagoListaChequeoRespuesta )" matSort class="mat-elevation-z8">
-                <ng-container matColumnDef="item">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Item </th>
-                    <td mat-cell *matCellDef="let element; index as j" align="center"> <b>{{ j + 1 }}</b> </td>
-                </ng-container>
-                <ng-container matColumnDef="documento">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Documento </th>
-                    <td mat-cell *matCellDef="let element" align="left" > <span class="supportBlack">{{ element.listaChequeoItem.nombre }}</span> </td>
-                </ng-container>
-                <ng-container matColumnDef="revTecnica">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Revisión técnica </th>
-                    <td mat-cell *matCellDef="let element" align="center">
-                        <div class="col">
-                            <mat-form-field class="select-width">
-                                <mat-select required [(ngModel)]="element.respuestaCodigo" (ngModelChange)="disabledBtn()">
-                                    <mat-option *ngFor="let revision of listaRevisionTecnica" [value]="revision.codigo">
-                                        {{ revision.nombre }}
-                                    </mat-option>
-                                </mat-select>
-                            </mat-form-field>
-                        </div>
-                    </td>
-                </ng-container>
-                <ng-container matColumnDef="observaciones">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Observaciones </th>
-                    <td mat-cell *matCellDef="let element; index as j" align="center">
-                        <button mat-raised-button color="accent" class="btn-table " [class.sin-diligenciar]="element.item==1" *ngIf="element.respuestaCodigo === noCumpleCodigo"
-                            (click)="getObservacion( element, i, j )">Observaciones</button>
-
-                        <button mat-raised-button color="accent" class="btn-table " [class.sin-diligenciar]="element.item==2" *ngIf="element.item==2"
-                            (click)="this.callSubsanacion()">Observaciones</button>
-                            
-                    </td>
-                </ng-container>
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
+    <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
+        <mat-expansion-panel class="expansion-style sub-expansion" *ngFor="let solicitudPagoListaChequeo of solicitudPagoModificado.solicitudPagoListaChequeo; index as i">
+            <mat-expansion-panel-header class="expansion-style--header">
+                <mat-panel-title class="expansion-style--title" style="font-size: .8em !important;">
+                    {{ firstLetterUpperCase( solicitudPagoListaChequeo.listaChequeo?.nombre ) }}
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+    
+            <div class="table-responsive">
+                <table mat-table [dataSource]="getMatTable( solicitudPagoListaChequeo.solicitudPagoListaChequeoRespuesta )" matSort class="mat-elevation-z8">
+                    <ng-container matColumnDef="item">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Item </th>
+                        <td mat-cell *matCellDef="let element; index as j" align="center"> <b>{{ j + 1 }}</b> </td>
+                    </ng-container>
+                    <ng-container matColumnDef="documento">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Documento </th>
+                        <td mat-cell *matCellDef="let element" align="left" > <span class="supportBlack">{{ element.listaChequeoItem.nombre }}</span> </td>
+                    </ng-container>
+                    <ng-container matColumnDef="revTecnica">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Revisión técnica </th>
+                        <td mat-cell *matCellDef="let element" align="center"> {{ getRevisionTecnica( element.respuestaCodigo ) }} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="observaciones">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Observaciones </th>
+                        <td mat-cell *matCellDef="let element; index as j" align="center">
+                            <button mat-raised-button color="accent" class="btn-table " [class.sin-diligenciar]="element.item==1" *ngIf="element.respuestaCodigo === noCumpleCodigo"
+                                (click)="getObservacion( element, i, j )">Observaciones</button>
+    
+                            <button mat-raised-button color="accent" class="btn-table " [class.sin-diligenciar]="element.item==2" *ngIf="element.item==2"
+                                (click)="this.callSubsanacion()">Observaciones</button>
+                                
+                        </td>
+                    </ng-container>
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+            </div>
+        </mat-expansion-panel>
+    </ng-container>
+    <ng-template #noEsVerDetalle>
+        <mat-expansion-panel class="expansion-style sub-expansion" *ngFor="let solicitudPagoListaChequeo of solicitudPagoModificado.solicitudPagoListaChequeo; index as i">
+            <mat-expansion-panel-header class="expansion-style--header">
+                <mat-panel-title class="expansion-style--title" style="font-size: .8em !important;" [ngClass]="getEstadoSemaforo( solicitudPagoListaChequeo )">
+                    {{ firstLetterUpperCase( solicitudPagoListaChequeo.listaChequeo?.nombre ) }}
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+    
+            <div class="table-responsive">
+                <table mat-table [dataSource]="getMatTable( solicitudPagoListaChequeo.solicitudPagoListaChequeoRespuesta )" matSort class="mat-elevation-z8">
+                    <ng-container matColumnDef="item">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Item </th>
+                        <td mat-cell *matCellDef="let element; index as j" align="center"> <b>{{ j + 1 }}</b> </td>
+                    </ng-container>
+                    <ng-container matColumnDef="documento">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Documento </th>
+                        <td mat-cell *matCellDef="let element" align="left" > <span class="supportBlack">{{ element.listaChequeoItem.nombre }}</span> </td>
+                    </ng-container>
+                    <ng-container matColumnDef="revTecnica">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Revisión técnica </th>
+                        <td mat-cell *matCellDef="let element" align="center">
+                            <div class="col">
+                                <mat-form-field class="select-width">
+                                    <mat-select required [(ngModel)]="element.respuestaCodigo" (ngModelChange)="disabledBtn()">
+                                        <mat-option *ngFor="let revision of listaRevisionTecnica" [value]="revision.codigo">
+                                            {{ revision.nombre }}
+                                        </mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                            </div>
+                        </td>
+                    </ng-container>
+                    <ng-container matColumnDef="observaciones">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Observaciones </th>
+                        <td mat-cell *matCellDef="let element; index as j" align="center">
+                            <button mat-raised-button color="accent" class="btn-table " [class.sin-diligenciar]="element.item==1" *ngIf="element.respuestaCodigo === noCumpleCodigo"
+                                (click)="getObservacion( element, i, j )">Observaciones</button>
+    
+                            <button mat-raised-button color="accent" class="btn-table " [class.sin-diligenciar]="element.item==2" *ngIf="element.item==2"
+                                (click)="this.callSubsanacion()">Observaciones</button>
+                                
+                        </td>
+                    </ng-container>
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+            </div>
+        </mat-expansion-panel>
+        <div class="text-center mb-2em" *ngIf="solicitudPagoModificado.solicitudPagoListaChequeo.length > 0">
+            <button mat-button color="warn" class="btn-guardar" type="button" (click)="guardar()" [disabled]="seDiligencioCampo === false">
+                <img src="assets/img/icon/guardar.svg" alt="Regresar">
+            </button>
         </div>
-    </mat-expansion-panel>
-    <div class="text-center mb-2em" *ngIf="solicitudPagoModificado.solicitudPagoListaChequeo.length > 0">
-        <button mat-button color="warn" class="btn-guardar" type="button" (click)="guardar()" [disabled]="seDiligencioCampo === false">
-            <img src="assets/img/icon/guardar.svg" alt="Regresar">
-        </button>
-    </div>
+    </ng-template>
+    
 </mat-accordion>
