--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-solicitud-pago/verdetalle-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-solicitud-pago/verdetalle-solicitud-pago.component.html
@@ -60,16 +60,15 @@
                             </ng-container>
                             <ng-container matColumnDef="valor">
                                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor </th>
-                                <td mat-cell *matCellDef="let element" align="center"> {{ element.valorSolicitud }} </td>
+                                <td mat-cell *matCellDef="let element" align="center"> {{ element.valorSolicitudDdp | currency:'':'symbol-narrow':'.0-0' }} </td>
                             </ng-container>
                             <ng-container matColumnDef="saldo">
                                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo </th>
-                                <td mat-cell *matCellDef="let element" align="center"> Viene del CU Generar documento de registro presupuestal de alli viene el saldo inicial </td>
+                                <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoPresupuestal | currency:'':'symbol-narrow':'.0-0' }} </td>
                             </ng-container>
                             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                         </table>
-                        <!--<mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>-->
                     </div>
                     <div class="tabs--actions"  style="margin-top: 1em;">
                         <button mat-raised-button color="accent" class="tabs--btn auxBtn"
@@ -116,10 +115,36 @@
                         </mat-panel-title>
                     </mat-expansion-panel-header>
     
-                    <!--
-                        Tabla pendiente en el CU
-                        <app-tabla-detalle-solicitud-pago></app-tabla-detalle-solicitud-pago>
-                    -->
+                    <div class="table-responsive">
+                        <table mat-table [dataSource]="dataSourceRegistrarSolicitud" matSort class="mat-elevation-z8">
+                            <ng-container matColumnDef="faseContrato">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Fase del contrato </th>
+                                <td mat-cell *matCellDef="let element" align="center"> <b> {{ element.faseContrato }} </b> </td>
+                            </ng-container>
+                            <ng-container matColumnDef="pagosRealizados">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Pagos Realizados </th>
+                                <td mat-cell *matCellDef="let element" align="center"> {{ element.pagosRealizados }} </td>
+                            </ng-container>
+                            <ng-container matColumnDef="valorFacturado">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor facturado </th>
+                                <td mat-cell *matCellDef="let element" align="center"> {{ element.valorFacturado | currency:'':'symbol-narrow':'.0-0' }} </td>
+                            </ng-container>
+                            <ng-container matColumnDef="porcentajeFacturado">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Porcentaje facturado </th>
+                                <td mat-cell *matCellDef="let element" align="center"> {{ element.porcentajeFacturado }} </td>
+                            </ng-container>
+                            <ng-container matColumnDef="saldoPorPagar">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo por pagar </th>
+                                <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoPorPagar | currency:'':'symbol-narrow':'.0-0' }} </td>
+                            </ng-container>
+                            <ng-container matColumnDef="porcentajePorPagar">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Porcentaje por pagar </th>
+                                <td mat-cell *matCellDef="let element" align="center"> {{ element.porcentajePorPagar }} </td>
+                            </ng-container>
+                            <tr mat-header-row *matHeaderRowDef="displayedColumnsRegistrarSolicitud"></tr>
+                            <tr mat-row *matRowDef="let row; columns: displayedColumnsRegistrarSolicitud;"></tr>
+                        </table>
+                    </div>
     
                     <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;">
                         <mat-card-header class="header-card header-card--margin">
@@ -152,31 +177,37 @@
                                         <span><b>Monto máximo por pagar en esta factura:</b> $15.000.000</span>
                                         <span><b>Monto pendiente por pagar en la fase</b>$30.000.000</span>
                                     </p>
+                                    <p class="info-sub-title supportBlack">
+                                        <span><b>Monto máximo por pagar en esta factura:</b> $15.000.000</span>
+                                        <span><b>Monto pendiente por pagar en la fase:</b> $30.000.000</span>
+                                    </p>
                                     <div class="d-flex justify-content-center" *ngIf="criteriosArraySeleccionados.length > 0">
                                         <strong>Criterios de pago:</strong>
                                         <p *ngFor="let criterio of criteriosArraySeleccionados; index as i" style="margin-left: .4em;"> {{ filterCriterios( criterio.codigo ) }}<span *ngIf="criteriosArraySeleccionados.length - 1 !== i">,</span><span *ngIf="criteriosArraySeleccionados.length - 1 === i">.</span> </p>
                                     </div>
-                                    <div *ngIf="criterios.length > 0">
-                                        <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;" *ngFor="let criterio of criterios.controls">
-                                            <mat-card-header class="header-card header-card--margin">
-                                                <mat-card-title class="header-card--text textoGris">
-                                                    {{ criterio.get( 'nombreCriterio' ).value }}
-                                                </mat-card-title>
-                                            </mat-card-header>
-                                            <!--Hay variables quemadas porque se tuvo que hacer un ajuste en el CU-->
-                                            <mat-card-content style="text-align: left;">
-                                                <p><strong>Tipo de pago:</strong> {{ criterio.get( 'tipoPago' ).value.nombre }} </p>
-                                                <!--
-                                                <p><strong>Concepto de pago para el criterio:</strong> {{ criterio.get( 'conceptoPago' ).value.nombre }} </p>
-                                                <mat-card-title class="header-card--text alineacion-titulos2" style="padding-left: 0em; margin-top: 0.7em;">
-                                                    {{ criterio.get( 'conceptoPago' ).value.nombre }}
-                                                </mat-card-title>
-                                                -->
-                                                <p><strong>Valor facturado al concepto:</strong> $ {{ criterio.get( 'valorFacturado' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
-                                                <p style="margin-top: 1em;"><strong style="font-size: 16px;">Valor total de los conceptos:</strong> $7.000.000</p>
-                                            </mat-card-content>
-                                        </mat-card>
-                                    </div>
+                                    <section *ngIf="criterios.length > 0">
+                                            <form [formGroup]="addressForm">
+                                                <div formArrayName="criterios">
+                                                    <div *ngFor="let criterio of criterios.controls; index as j" [formGroup]="criterio">
+                                                        <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;">
+                                                            <mat-card-header class="header-card header-card--margin">
+                                                                <mat-card-title class="header-card--text textoGris">
+                                                                    {{ criterio.get( 'nombreCriterio' ).value }}
+                                                                </mat-card-title>
+                                                            </mat-card-header>
+                                                            <mat-card-content style="text-align: left;">
+                                                                <p style="margin-bottom: 2em;"><strong>Tipo de pago:</strong> {{ criterio.get( 'tipoPago' ).value.nombre }} </p>
+                                                                <div *ngFor="let concepto of getConceptos( j ).controls">
+                                                                    <p style="font-size: 1.8em;"><b> {{ concepto.get( 'conceptoPagoCriterioNombre' ).value }} </b></p>
+                                                                    <p><b>Valor facturado al concepto:</b> ${{ concepto.get( 'valorFacturadoConcepto' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
+                                                                </div>
+                                                                <p style="margin-top: 2em;"><strong style="font-size: 1.8em;">Valor total de los conceptos:</strong> ${{ criterio.get( 'valorFacturado' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
+                                                            </mat-card-content>
+                                                        </mat-card>
+                                                    </div>
+                                                </div>
+                                            </form>
+                                    </section>
                                 </mat-expansion-panel>
                                 <mat-expansion-panel class="expansion-style sub-expansion-black">
                                     <mat-expansion-panel-header class="expansion-style--header">
@@ -184,7 +215,7 @@
                                             Detalle factura para proyectos asociados
                                         </mat-panel-title>
                                     </mat-expansion-panel-header>
-                                    <app-detalle-factura-proyectos-asociados [solicitudPago]="contrato.solicitudPagoOnly" [esVerDetalle]="true"></app-detalle-factura-proyectos-asociados>
+                                    <app-detalle-factura-proyectos-asociados [solicitudPago]="contrato.solicitudPagoOnly" [esVerDetalle]="true" [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"></app-detalle-factura-proyectos-asociados>
                                 </mat-expansion-panel>
                                 <mat-expansion-panel class="expansion-style sub-expansion-black">
                                     <mat-expansion-panel-header class="expansion-style--header">
@@ -212,28 +243,35 @@
                                     </mat-expansion-panel-header>
                                     <p class="info-sub-title supportBlack">
                                         <span><b>Monto máximo por pagar en esta factura:</b> $15.000.000</span>
-                                        <span><b>Monto pendiente por pagar en la fase</b>$30.000.000</span>
+                                        <span><b>Monto pendiente por pagar en la fase:</b>$30.000.000</span>
                                     </p>
                                     <div class="d-flex justify-content-center" *ngIf="criteriosArraySeleccionados.length > 0">
                                         <strong>Criterios de pago:</strong>
-                                        <p *ngFor="let criterio of criteriosArraySeleccionados; index as i" style="margin-left: .4em;"> {{ filterCriterios( criterio.codigo ) }}<span *ngIf="criteriosArraySeleccionados.length - 1 !== i">,</span><span *ngIf="criteriosArraySeleccionados.length - 1 === i">.</span> </p>
+                                        <p *ngFor="let criterio of criteriosArraySeleccionados; index as i" style="margin-left: .4em;"> {{ criterio.nombre }}<span *ngIf="criteriosArraySeleccionados.length - 1 !== i">,</span><span *ngIf="criteriosArraySeleccionados.length - 1 === i">.</span> </p>
                                     </div>
-                                    <div *ngIf="criterios.length > 0">
-                                        <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;" *ngFor="let criterio of criterios.controls">
-                                            <mat-card-header class="header-card header-card--margin">
-                                                <mat-card-title class="header-card--text textoGris">
-                                                    {{ criterio.get( 'nombreCriterio' ).value }}
-                                                </mat-card-title>
-                                            </mat-card-header>
-                                            <mat-card-content style="text-align: left;">
-                                                <p><strong>Tipo de pago:</strong> {{ criterio.get( 'tipoPago' ).value.nombre }} </p>
-                                                <!--
-                                                    <p><strong>Concepto de pago para el criterio:</strong> {{ criterio.get( 'conceptoPago' ).value.nombre }} </p>
-                                                -->
-                                                <p><strong>Valor facturado al concepto:</strong> $ {{ criterio.get( 'valorFacturado' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
-                                            </mat-card-content>
-                                        </mat-card>
-                                    </div>
+                                    <section *ngIf="criterios.length > 0">
+                                            <form [formGroup]="addressForm">
+                                                <div formArrayName="criterios">
+                                                    <div *ngFor="let criterio of criterios.controls; index as j" [formGroup]="criterio">
+                                                        <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;">
+                                                            <mat-card-header class="header-card header-card--margin">
+                                                                <mat-card-title class="header-card--text textoGris">
+                                                                    {{ criterio.get( 'nombreCriterio' ).value }}
+                                                                </mat-card-title>
+                                                            </mat-card-header>
+                                                            <mat-card-content style="text-align: left;">
+                                                                <p style="margin-bottom: 2em;"><strong>Tipo de pago:</strong> {{ criterio.get( 'tipoPago' ).value.nombre }} </p>
+                                                                <div *ngFor="let concepto of getConceptos( j ).controls">
+                                                                    <p style="font-size: 1.8em;"><b> {{ concepto.get( 'conceptoPagoCriterioNombre' ).value }} </b></p>
+                                                                    <p><b>Valor facturado al concepto:</b> ${{ concepto.get( 'valorFacturadoConcepto' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
+                                                                </div>
+                                                                <p style="margin-top: 2em;"><strong style="font-size: 1.8em;">Valor total de los conceptos:</strong> ${{ criterio.get( 'valorFacturado' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
+                                                            </mat-card-content>
+                                                        </mat-card>
+                                                    </div>
+                                                </div>
+                                            </form>
+                                    </section>
                                 </mat-expansion-panel>
                                 <mat-expansion-panel class="expansion-style sub-expansion-black">
                                     <mat-expansion-panel-header class="expansion-style--header">
@@ -249,7 +287,7 @@
                                             Detalle factura para proyectos asociados
                                         </mat-panel-title>
                                     </mat-expansion-panel-header>
-                                    <app-detalle-factura-proyectos-asociados [solicitudPago]="contrato.solicitudPagoOnly" [esVerDetalle]="true"></app-detalle-factura-proyectos-asociados>
+                                    <app-detalle-factura-proyectos-asociados [solicitudPago]="contrato.solicitudPagoOnly" [esVerDetalle]="true" [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"></app-detalle-factura-proyectos-asociados>
                                 </mat-expansion-panel>
                                 <mat-expansion-panel class="expansion-style sub-expansion-black">
                                     <mat-expansion-panel-header class="expansion-style--header">
@@ -287,11 +325,8 @@
                     Validar lista de chequeo
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <div style="margin-top: 1em;" *ngIf="contrato !== undefined">
-                <div class="d-flex align-items-center solbloq ml8 info-text en-alertaLibre mb-2em">
-                    Este acordeón consume información de la funcionalidad Listas de chequeó.
-                </div>
-            </div>
+
+            <app-validar-lista-chequeo [contrato]="contrato" [esVerDetalle]="true"></app-validar-lista-chequeo>
         </mat-expansion-panel>
     </mat-accordion>
     <mat-accordion>
