--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-amortizacion-anticipo/form-amortizacion-anticipo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-amortizacion-anticipo/form-amortizacion-anticipo.component.html
@@ -6,8 +6,8 @@
             </mat-card-title>
         </mat-card-header>
         <mat-card-content style="text-align: left;">
-            <p><strong>Porcentaje de amortización:</strong> {{ addressForm.get( 'porcentajeAmortizacion' ).value }} </p>
-            <p><strong>Valor de amortización:</strong> {{ addressForm.get( 'valorAmortizacion' ).value }} </p>
+            <p><strong>Porcentaje de amortización:</strong> {{ addressForm.get( 'porcentajeAmortizacion' ).value }}% </p>
+            <p><strong>Valor de amortización:</strong> {{ addressForm.get( 'valorAmortizacion' ).value | currency:'':'symbol-narrow':'.0-0' }} </p>
         </mat-card-content>
     </mat-card>
 </ng-container>
