--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-criterios-pago/form-criterios-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-criterios-pago/form-criterios-pago.component.html
@@ -1,7 +1,7 @@
-<form [formGroup]="addressForm" novalidate (ngSubmit)="guardar()">
+<form [formGroup]="addressForm" novalidate (ngSubmit)="guardar()" *ngIf="montoMaximoPendiente !== undefined && criterios.length > 0">
   <p class="info-sub-title supportBlack">
-    <span><b>Monto máximo por pagar en esta factura:</b> $15.000.000</span>
-    <span><b>Monto pendiente por pagar en la fase:</b> $30.000.000</span>
+    <span><b>Monto máximo por pagar en esta factura:</b> {{ montoMaximoPendiente.montoMaximo | currency:'':'symbol-narrow':'.0-0' }} </span>
+    <span><b>Monto pendiente por pagar en la fase:</b> {{ montoMaximoPendiente.valorPendientePorPagar | currency:'':'symbol-narrow':'.0-0' }} </span>
   </p>
   <div class="row">
     <div class="col-md-12">
